@@ -9,6 +9,8 @@
 
 unsigned char X, Y;
 
+const char PADDLES = 1; // Paddles flag for a78 header 
+
 // Generated from sprites7800 breakout.yaml
 holeydma reversed scattered(8,6) char suitcase_odd[48] = {
 	0x30, 0xf0, 0xf0, 0xf0, 0xf0, 0xe0, 0x75, 0xf5, 0xf5, 0xf5, 0xf5, 0xf5, 0x57, 0xbd, 0xf5, 0xf5,
