@@ -1,4 +1,5 @@
 v0.2.23 (03/12/2024) :
+		- Added paddles support in header
     - Enhanced memory mapping
 
 v0.2.22 (02/12/2024) :
